# otus_main_patterns

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.in  Makefile  Makefile.conf  README.md  build.bat  conanfile.txt  configure  diagram.bpmn
.github/workflows/: cmake.yml
contrib/: Makefile
contrib/boost/: .gitignore  Makefile  boost_bcp_deps.lst
contrib/gtest/: Makefile
init/: CMakeLists.txt
init/common/: command_error.h  common_init.h  i_command.h  i_object.h  macro_command.h  u_object.h
init/common/src/: common_init.cpp  macro_command.cpp
init/ioc/: ioc.h
init/ioc/src/: ioc.cpp
init/move/: i_movable.h  movable_adapter.h  move_command.h  point.h
init/move/src/: move_command.cpp
init/rotate/: rotatable_adapter.h  rotate_command.h
init/rotate/src/: rotate_command.cpp
init/tests/: CMakeLists.txt  init_test.cpp
ioc/: CMakeLists.txt  ioc.h
ioc/src/: ioc.cpp  ioc.h  resolve_error.h
ioc/tests/: CMakeLists.txt  ioc_mt_test.cpp  ioc_test.cpp
macro_command/: CMakeLists.txt
macro_command/common/: i_command.h  i_object.h  macro_command.cpp  macro_command.h  u_object.h
macro_command/fuel/: burn_fuel_command.cpp  burn_fuel_command.h  check_fuel_command.cpp  check_fuel_command.h  fuel_burnable_adapter.h  fuel_checkable_adapter.h  i_fuel_burnable.h  i_fuel_checkable.h
macro_command/move/: i_movable.h  movable_adapter.h  move_command.cpp  move_command.h  move_error.h
macro_command/rotate/: i_rotatable.h  rotatable_adapter.h  rotate_command.cpp  rotate_command.h  rotate_error.h
macro_command/tests/: CMakeLists.txt  burn_fuel_test.cpp  check_fuel_test.cpp  macro_command_test.cpp  move_command_with_burn_fuel_test.cpp
src/: CMakeLists.txt  Makefile  command_executor.cpp  command_executor.h  common_types.h  move.h  rotate.h
src/common/: icommand.h  iobject.h  uobject.h
src/move/: imovable.h  movable_adapter.h  move_command.h  move_error.h  point.h
src/rotate/: irotatable.h  rotatable_adapter.h  rotate_command.h  rotate_error.h
src/test/: CMakeLists.txt  movement_test.cpp
state_executor/: CMakeLists.txt  command_executor.h  command_queue.h  i_command.h  i_executor_state.h  moveto_state.h  normal_state.h  special_commands.h
state_executor/src/: command_executor.cpp  moveto_state.cpp  normal_state.cpp  special_commands.cpp
state_executor/tests/: CMakeLists.txt  state_executor_test.cpp
test/: CMakeLists.txt  command_executor_test.cpp  movement_test.cpp  rotating_test.cpp
